--- a/buyer/dashboard.html
+++ b/buyer/dashboard.html
@@ -118,3 +118,10 @@
     <script src="JS/dashboard.js"></script>
 </body>
 </html>
+git add .
+git commit -m "Adding comment"
+git push -u origin main
+git remote add origin https://github.com/thronbeat/FMP.git
+git branch -M main
+git push -u origin main
+
