--- a/buyer/dashboard.html
+++ b/buyer/dashboard.html
@@ -119,9 +119,13 @@
 </body>
 </html>
 git add .
-git commit -m "Adding comment"
-git push -u origin main
-git remote add origin https://github.com/thronbeat/FMP.git
-git branch -M main
-git push -u origin main
 
+
+
+
+git init
+git add .
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/thronbeat/FMP.git
+git push -u origin main
